fixed positioning of buttins during mobile layout. added top to nav headers to move closer to dark mode button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,8 @@
 /*<------------------body------------->*/
 body{
     display:grid;
-    grid-template-rows: 0.3fr 0.3fr 3fr 0.5fr;
+    height: 100vh;
+    grid-template-rows: 0.3fr 0.2fr 3fr 0.5fr;
     grid-template-columns: 20% 80%;
     background-color: #F3E9DE;
    }
@@ -22,6 +23,8 @@ nav h2{
     display: inline-block;
     margin: 10px;
     font-size: medium;
+    position: relative;
+    top: 2.3rem;
 }
 
 
@@ -54,7 +57,7 @@ aside h2{
 
 aside ul{
     color: #256993;
-    text-align: center;
+    text-align: left;
     list-style-type: square;
 }
 
@@ -74,7 +77,7 @@ main{
 .main_container{
     display: grid;
     grid-template-columns: 1fr 1fr 0.3fr 0.3fr;
-    grid-template-rows: 0.5fr 1fr 0.5fr;
+    grid-template-rows: 0.2fr 0.8fr 0.2fr;
     column-gap: 0.3rem;
 }
 
@@ -111,7 +114,7 @@ footer h2{
     width: 7rem;
     height: 2rem;
     position: relative;
-    top: 3rem;
+    top: 4rem;
     left: 0.7rem;
 }
 
@@ -124,7 +127,7 @@ footer h2{
     grid-column: 4/5;
     grid-row: 1;
     position: relative;
-    top: 50px;
+    top: 4rem;
     justify-self: center;
 }
 
@@ -137,7 +140,7 @@ footer h2{
     grid-column: 3;
     grid-row: 3;
     position: relative;
-    top: 0.3rem;
+    top: 0.5rem;
     justify-self: right;
 }
 
@@ -150,7 +153,7 @@ footer h2{
     grid-column: 4/5;
     grid-row: 3;
     position: relative;
-    top: 5px;
+    top: 0.5rem;
     justify-self: center;
 }
 
@@ -220,7 +223,7 @@ textarea{
     .main_container{
         display: grid;
         grid-template-columns: 1fr 1fr 0.3fr 0.3fr;
-        grid-template-rows: 0.3fr 1.5fr 0.3fr;
+        grid-template-rows: 0.14fr 0.7fr 0.14fr;
         column-gap: 0.5rem;
     }
     
@@ -231,17 +234,17 @@ textarea{
         grid-row: 2/3;
         margin-left: 0.7rem;
         margin-right: 0.4rem;
-        height: 15rem;
+        height: 23rem;
     }
 
 /*<------------------buttons------------->*/
 
 .new_note{
-    top: 0.5rem;
+    top: 2rem;
 }
 
 .dark_theme{
-    top: 0.5rem;
+    top: 2rem;
 }
 
 
